Fix unicast TTL: set IP_TTL via reflection since setTimeToLive() only affects multicast
MulticastSocket.setTimeToLive() sets IP_MULTICAST_TTL which has no effect on
unicast packets — the OS default is used instead (128 on Windows). This adds
a best-effort setsockopt(IP_TTL) call via sun.nio.ch.Net reflection, handling
both JDK 17 and JDK 21+ socket internals. Requires --add-opens JVM flags;
falls back gracefully with a debug log when reflection is unavailable.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>